--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 efficientnet_pytorch==0.7.1
-numpy==1.21.5
-pandas==1.4.2
+numpy
+pandas
 pretrainedmodels==0.7.4
-scikit_learn==1.0.2
+scikit_learn
 torch==1.11.0
 torchvision==0.12.0
 tensorboardx==2.2
