--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy
 pandas
 pretrainedmodels==0.7.4
 scikit_learn
-torch==1.11.0
-torchvision==0.12.0
-tensorboardx==2.2
+torch
+torchvision
+tensorboardx
 pillow==9.0.1
