--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-efficientnet_pytorch==0.7.1
+efficientnet_pytorch
 numpy
 pandas
-pretrainedmodels==0.7.4
+pretrainedmodels
 scikit_learn
 torch
 torchvision
 tensorboardx
-pillow==9.0.1
+pillow
